<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.baraa.bsoft.taskstimer.MainActivity">
    <item
        android:id="@+id/mnuMain_addTasks"
        android:icon="@android:drawable/ic_menu_add"
        android:orderInCategory="100"
        android:title="@string/mnuMain_addTasks"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/mnuMain_showDuration"
        android:icon="@android:drawable/ic_menu_view"
        android:orderInCategory="101"
        android:title="@string/mnuMain_showDuration"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/mnuMain_settings"
        android:orderInCategory="102"
        android:title="@string/mnuMain_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/mnuMain_showAbout"
        android:icon="@android:drawable/ic_menu_info_details"
        android:orderInCategory="103"
        android:title="@string/mnuMain_showAbout"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/mnuMain_generate"
        android:orderInCategory="104"
        android:title="@string/mnuMain_generate"
        android:visible="false" />
</menu>
