<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/edName_addEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/Hint_TaskName_addEdit"
        android:inputType="text"
        android:maxLength="64" />

    <EditText
        android:id="@+id/edDescription_addEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_description_addEdit"
        android:inputType="textCapSentences|textMultiLine"
        android:maxLength="256" />

    <EditText
        android:id="@+id/edSortOrder_addEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hit_sortOrder_addEdit"
        android:inputType="number"
        android:maxLength="3" />

    <Button
        android:id="@+id/btnSave_addEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:drawableLeft="@android:drawable/ic_menu_save"
        android:drawableStart="@android:drawable/ic_menu_save"
        android:text="@string/btn_save_addEdit"
        android:textAlignment="center" />
</LinearLayout>